# myemulator

./: CMakeLists.txt  README.md
include/: commands.h  emulator.h  memory.h  my_parser.h  preprocessor.h  processor.h  stack.h
src/: commands.cpp  emulator.cpp  memory.cpp  my_parser.cpp  preprocessor.cpp  processor.cpp  stack.cpp
test/: commands_test.cpp  emulator_test.cpp  generate_fib_program.py  main.cpp  parser_test.cpp  program_fact_1.txt  program_fact_2.txt  program_fib.txt  stack_test.cpp
tests/: CMakeLists.txt  main.cpp  stack_test.cpp
